// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatusField > renders if can modify and cataloger logged in 1`] = `
<DocumentFragment>
  <div
    class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-oc1rc0 ant-form-item-horizontal"
  >
    <div
      class="ant-row ant-form-item-row css-dev-only-do-not-override-oc1rc0 css-var-root"
    >
      <div
        class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-19 css-dev-only-do-not-override-oc1rc0 css-var-root"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-space-compact css-dev-only-do-not-override-oc1rc0 ant-space-compact-block"
            >
              <div
                class="ant-select ant-select-outlined ant-select-in-form-item ant-select-has-feedback ant-select-compact-item ant-select-compact-first-item ant-select-compact-last-item css-var-root ant-select-css-var css-dev-only-do-not-override-oc1rc0 ant-select-single ant-select-show-arrow"
                data-test-type="single-select"
                data-testid="[object Object]"
                form="[object Object]"
                name="[object Object]"
              >
                <div
                  class="ant-select-content"
                >
                  <div
                    class="ant-select-placeholder"
                  />
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    autocomplete="new-password"
                    class="ant-select-input"
                    id="test-id"
                    readonly=""
                    role="combobox"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="ant-select-suffix"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusField > renders if can modify but not cataloger logged in 1`] = `
<DocumentFragment>
  <div
    class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-oc1rc0 ant-form-item-horizontal"
  >
    <div
      class="ant-row ant-form-item-row css-dev-only-do-not-override-oc1rc0 css-var-root"
    >
      <div
        class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-19 css-dev-only-do-not-override-oc1rc0 css-var-root"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-space-compact css-dev-only-do-not-override-oc1rc0 ant-space-compact-block"
            >
              <div
                class="ant-select ant-select-outlined ant-select-in-form-item ant-select-has-feedback ant-select-compact-item ant-select-compact-first-item ant-select-compact-last-item css-var-root ant-select-css-var css-dev-only-do-not-override-oc1rc0 ant-select-single ant-select-show-arrow"
                data-test-type="single-select"
                data-testid="[object Object]"
                form="[object Object]"
                name="[object Object]"
              >
                <div
                  class="ant-select-content"
                >
                  <div
                    class="ant-select-placeholder"
                  />
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    autocomplete="new-password"
                    class="ant-select-input"
                    id="test-id"
                    readonly=""
                    role="combobox"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="ant-select-suffix"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusField > renders if can not modify and not cataloger logged in 1`] = `
<DocumentFragment>
  <div
    class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-oc1rc0 ant-form-item-horizontal"
  >
    <div
      class="ant-row ant-form-item-row css-dev-only-do-not-override-oc1rc0 css-var-root"
    >
      <div
        class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-19 css-dev-only-do-not-override-oc1rc0 css-var-root"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-space-compact css-dev-only-do-not-override-oc1rc0 ant-space-compact-block"
            >
              <div
                class="ant-select ant-select-outlined ant-select-in-form-item ant-select-has-feedback ant-select-compact-item ant-select-compact-first-item ant-select-compact-last-item css-var-root ant-select-css-var css-dev-only-do-not-override-oc1rc0 ant-select-single ant-select-show-arrow ant-select-disabled"
                data-test-type="single-select"
                data-testid="[object Object]"
                form="[object Object]"
                name="[object Object]"
              >
                <div
                  class="ant-select-content"
                >
                  <div
                    class="ant-select-placeholder"
                  />
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    autocomplete="new-password"
                    class="ant-select-input"
                    disabled=""
                    id="test-id"
                    readonly=""
                    role="combobox"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="ant-select-suffix"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
